--- a/templates/show_csv_data.html
+++ b/templates/show_csv_data.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.101.0">
-    <title>ML Prediction with FLASK/API/SQL</title>
+    <title>End-to-End Machine Learning Project with FLASK/API/SQL</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/jumbotron/">
 
@@ -79,7 +79,7 @@
     <header class="pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
       
-        <span class="fs-4">ML Prediction with FLASK/API/SQL</span>
+        <span class="fs-4">End-to-End Machine Learning Project with FLASK/API/SQL</span>
       </a>
       <a href="/">Back to mainpage</a>
     </header>
@@ -88,7 +88,7 @@
       <div class="table" >
         <h1 class="display-5 fw-bold">Costs & Sales Overview</h1>
        
-        <p> Here you can see the costs and realized sales accounted in DB</p>
+        <p> Here you can see data used for predictions in the DB</p>
      
         {{ data_var|safe }}
 
