--- a/templates/show_upload.html
+++ b/templates/show_upload.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.101.0">
-    <title>>Machine Learning | sales-prediction with FLASK/API/SQL</title>
+    <title>End-to-End Machine Learning Project with FLASK/API/SQL</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/jumbotron/">
 
@@ -78,7 +78,7 @@
     <header class="pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
       
-        <span class="fs-4">Machine Learning | sales-prediction with FLASK/API/SQL</span>
+        <span class="fs-4">End-to-End Machine Learning Project with FLASK/API/SQL</span>
       </a>
     </header>
 
@@ -119,7 +119,7 @@
       <div class="col-md-6">
         <div class="h-100 p-5 bg-success text-white border rounded-3">
           <h2>Make prediction with model</h2>
-          <p>Execute Prediction of a Linear Regression Model for getting sales prediction</p>
+          <p>Execute Prediction of a ML model (ExtraTree) for getting prediction</p>
           <form method="GET" enctype="multipart/form-data" action="/predict">
             <input class="btn btn-secondary"  type="submit" value="Make Predictions" />
         </form>
