--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.101.0">
-    <title>>Machine Learning | sales-prediction with FLASK/API/SQL</title>
+    <title>End-to-End Machine Learning Project with FLASK/API/SQL</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/jumbotron/">
 
@@ -118,8 +118,8 @@
       </div>
       <div class="col-md-6">
         <div class="h-100 p-5 bg-success text-white border rounded-3">
-          <h2>Make prediction with model</h2>
-          <p>Execute Prediction of a Linear Regression Model for getting sales prediction</p>
+          <h2>Make prediction with the model</h2>
+          <p>Execute Prediction of a ML Model (ExtraTree) for getting predictions</p>
           <form method="GET" enctype="multipart/form-data" action="/predict">
             <input class="btn btn-secondary"  type="submit" value="Make Predictions" />
         </form>
