--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
     <header class="pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
       
-        <span class="fs-4">Machine Learning | sales-prediction with FLASK/API/SQL</span>
+        <span class="fs-4">End-to-End Machine Learning Project with FLASK/API/SQL</span>
       </a>
     </header>
 
