--- a/templates/show_upload.html
+++ b/templates/show_upload.html
@@ -88,7 +88,7 @@
           <h2>Upload data</h2>
           <p> Here you can upload a .json file </p>
           <form method="POST" enctype="multipart/form-data" action="/">
-            <input class="btn btn-outline-secondary" type="file" id="myFile" name="uploaded-file" accept=".csv">
+            <input class="btn btn-outline-secondary" type="file" id="myFile" name="uploaded-file" accept=".json">
             <input class="btn btn-primary btn-md" type="submit" value="Upload file">
         </form>
         {{ saved | safe }}
